--- a/source/fefu.dtx
+++ b/source/fefu.dtx
@@ -824,9 +824,9 @@
 \renewcommand{\cftaftertoctitle}{\hfill\hspace{0pt}}
 \renewcommand{\cftsecleader}{\cftdotfill{\cftdotsep}}
 %    \end{macrocode}
-% Add paragraphs to toc.
+% Set toc depth
 %    \begin{macrocode}
-\setcounter{tocdepth}{4}
+\setcounter{tocdepth}{2}
 %    \end{macrocode}
 % Prevents abstract from being included in toc
 %    \begin{macrocode}
