Use short name for reviewer

--- a/source/fefu.dtx
+++ b/source/fefu.dtx
@@ -753,7 +753,7 @@
             & \@FEFUpostfield[{\tiny должность, уч. степень, уч. звание}]{Руководитель ВКР }{\@FEFUsupervisortitle}{\@FEFUcolumnwidth}\\
             & \@FEFUsigname{\@FEFUsignwidth}{\@FEFUsupervisor}{\@FEFUcolumnwidth}\\ & \\
             & \@FEFUpostfield[уч. степень, уч. звание]{Назначен рецензент }{\@FEFUreviewertitle}{\@FEFUcolumnwidth}\\
-            & \@FEFUfield[фамилия, имя, отчество]{\@FEFUreviewer}{\@FEFUcolumnwidth}\\ &\\
+            & \@FEFUfield[фамилия, имя, отчество]{\@FEFUshortname{\@FEFUreviewer}}{\@FEFUcolumnwidth}\\ &\\
             Защищена в ГЭК с оценкой & \@FEFUaddguillemots{Допустить к защите}\\
             \@FEFUfield{}{0.75\@FEFUcolumnwidth} & \multirow{2}{*}{\parbox{\@FEFUcolumnwidth}{Заместитель директора ШЦЭ по УВР, \@FEFUdeputytitle}}\\
             Секретарь ГЭК &\\
