--- a/source/fefu.dtx
+++ b/source/fefu.dtx
@@ -904,7 +904,7 @@
 %    \begin{macrocode}
 \renewcommand\@biblabel[1]{\indent#1.}
 \let\@FEFUprintbibliography\printbibliography
-\renewcommand{\printbibliography}[1][]{\@FEFUifempty{#1}{\@FEFUprintbibliography[title=Список использованных источников]}{\@FEFUprintbibliography[title=Список использованных источнико, #1]}}
+\renewcommand{\printbibliography}[1][]{\begingroup\sloppy\@FEFUifempty{#1}{\@FEFUprintbibliography[title=Список использованных источников]}{\@FEFUprintbibliography[title=Список использованных источников, #1]}\endgroup}
 %    \end{macrocode}
 % The abstract style is set up here.
 %    \begin{macrocode}
