--- a/source/fefu.dtx
+++ b/source/fefu.dtx
@@ -474,6 +474,20 @@
 }
 %    \end{macrocode}
 % \end{macro}
+% \begin{macro}{\@FEFUmultilinepostfield}
+% Inserts \marg{arg1} and fills avaliable space with a multiline field.
+%    \begin{macrocode}
+\newcommand{\@FEFUmultilinepostfield}[4][]{%
+    \settowidth{\@FEFUfieldlength}{#3}%
+    \setlength{\@FEFUpostfieldlength}{#4-\widthof{#2}}%
+    \ifthenelse{\lengthtest{\@FEFUpostfieldlength<\@FEFUfieldlength}}{%
+        \parbox{#4}{\hbox{#2}\@FEFUfield[#1]{#3}{#4}}%
+    }{%
+        #2\@FEFUfield[#1]{#3}{\@FEFUpostfieldlength}%
+    }%
+}
+%    \end{macrocode}
+% \end{macro}
 % \begin{macro}{\@FEFUmakedate}
 % Adds year to a date if date is set.
 %    \begin{macrocode}
@@ -754,19 +768,19 @@
 % \begin{macro}{\makethesistitlebackside}
 % Make thesis title back side.
 %    \begin{macrocode}
-\newcommand{\makethesistitlebackside}{%
+\newcommand{\makethesistitlebackside}[1][1.25]{%
     \thispagestyle{empty}
     \newgeometry{a4paper,left=1cm,right=2.5cm,top=2cm,bottom=2cm}
-    {\setstretch{1.25}%
+    {\setstretch{#1}%
         \noindent\begin{tabular}{p{\@FEFUcolumnwidth}p{\@FEFUcolumnwidth}}
             & \@FEFUpostfield[подпись]{Автор работы }{}{0.9\@FEFUcolumnwidth}\\
             & \@FEFUdate{\@FEFUcolumnwidth}\\ &\\
             & Консультант\\
             & \@FEFUsigname{\@FEFUsignwidth}{\@FEFUconsultant}{\@FEFUcolumnwidth}\\
             & \@FEFUdate{\@FEFUcolumnwidth}\\ &\\
-            & \@FEFUpostfield[{\tiny должность, уч. степень, уч. звание}]{Руководитель ВКР }{\@FEFUsupervisortitle}{\@FEFUcolumnwidth}\\
+            & \@FEFUmultilinepostfield[{\tiny должность, уч. степень, уч. звание}]{Руководитель ВКР }{\@FEFUsupervisortitle}{\@FEFUcolumnwidth}\\
             & \@FEFUsigname{\@FEFUsignwidth}{\@FEFUsupervisor}{\@FEFUcolumnwidth}\\ & \\
-            & \@FEFUpostfield[уч. степень, уч. звание]{Назначен рецензент }{\@FEFUremoveprefix{\@FEFUreviewertitle}}{\@FEFUcolumnwidth}\\
+            & \@FEFUmultilinepostfield[уч. степень, уч. звание]{Назначен рецензент }{\@FEFUreviewertitle}{\@FEFUcolumnwidth}\\
             & \@FEFUfield[фамилия, имя, отчество]{\@FEFUshortname{\@FEFUreviewer}}{\@FEFUcolumnwidth}\\ &\\
             Защищена в ГЭК с оценкой & \@FEFUaddguillemots{Допустить к защите}\\
             \@FEFUfield{}{0.75\@FEFUcolumnwidth} & \multirow{2}{*}{\parbox{\@FEFUcolumnwidth}{Заместитель директора ШЦЭ по УВР, \@FEFUdeputytitle}}\\
@@ -1022,7 +1036,7 @@
         Группа \@FEFUfield{\@FEFUgroup}{0cm}%
     }\\
     \smallskip\\
-    \@FEFUpostfield[ученая степень, ученое звание, Ф.И.О]{Руководитель ВКР }{\@FEFUremoveprefix{\@FEFUsupervisortitle}\ \@FEFUsupervisor}{\textwidth}\\
+    \@FEFUpostfield[ученая степень, ученое звание, Ф.И.О]{Руководитель ВКР }{\@FEFUsupervisortitle\ \@FEFUsupervisor}{\textwidth}\\
     \smallskip\\
     На тему {\expandafter\@FEFUunderline\@title\hfill}\\
     \smallskip\\
@@ -1093,9 +1107,14 @@
         \bigskip
         \hbox to .75\textwidth{Дата выдачи задания\hfill\@FEFUdate[\@FEFUtaskdate]{.35\textwidth}}
         \bigskip\bigskip
-        \hbox to \textwidth{Руководитель ВКР\hfill\hbox to .75\textwidth{\@FEFUfield[должность, ученая степень, ученое звание]{\@FEFUsupervisortitle}{.3\textwidth}\hfill\@FEFUfield[подпись]{}{.15\textwidth}\hfill\@FEFUfield[Ф.И.О.]{\@FEFUshortname{\@FEFUsupervisor}}{.25\textwidth}}}
+        \begingroup\setlength\tabcolsep{.0125\textwidth}\def\arraystretch{0}%
+        \begin{tabular}{@{}b{.25\textwidth}@{}b{.3\textwidth}b{.15\textwidth}b{.25\textwidth}@{}}
+            Руководитель ВКР & \@FEFUfield[должность, ученое звание]{\pbox[b]{.3\textwidth}{\@FEFUsupervisortitle}}{.3\textwidth} & \@FEFUfield[подпись]{}{.15\textwidth} & \@FEFUfield[Ф.И.О.]{\@FEFUshortname{\@FEFUsupervisor}}{.25\textwidth}
+        \end{tabular}\\
         \bigskip
-        \hbox to \textwidth{Задание получил\hfill\hbox to .425\textwidth{\@FEFUfield[подпись]{}{.15\textwidth}\hfill\@FEFUfield[Ф.И.О.]{\@FEFUshortname{\@author}}{.25\textwidth}}}
+        \begin{tabular}{@{}b{.25\textwidth}@{}b{.3\textwidth}b{.15\textwidth}b{.25\textwidth}@{}}
+            Задание получил & & \@FEFUfield[подпись]{}{.15\textwidth} & \@FEFUfield[Ф.И.О.]{\@FEFUshortname{\@author}}{.25\textwidth}
+        \end{tabular}\endgroup
     \par\newpage\endgroup}
 %    \end{macrocode}
 % \end{macro}
