Move practice example to example/practice

--- a/example/practice/presentation.tex
+++ b/example/practice/presentation.tex
@@ -1,4 +1,4 @@
-\documentclass{../cls/fefu_presentation}
+\documentclass{../../cls/fefu_presentation}
 
 \setgroup{М9999-99.99.99xxxx}
 \setsupervisor{Петров Пётр Петрович}{учёная степень, учёное звание\\должность, место работы}
