Fix masters thesis example
- remove review and supervisor's review
- remove unused packages
- fix other minor mistakes

--- a/example/masters/subfiles/task.tex
+++ b/example/masters/subfiles/task.tex
@@ -1,20 +1,6 @@
 \documentclass[../document.tex]{subfiles}
 
 \begin{document}
-    \begin{thesistask}[Фамилия Имя Отчество]{01.01.22}{Номер приказа}{01.01.22}{01.01.22}
-        \taskitem
-        \uline{
-            ...\hfill\null
-        }
-        \taskitem
-        \uline{
-            ...\hfill\null
-        }
-        \taskitem
-        \uline{
-            ...\hfill\null\\
-            ...\hfill\null\\
-            ...\hfill\null\\
-        }
+    \begin{thesistask}[Фамилия Имя Отчество в родительном падеже]{01.01.22}{Номер приказа}{01.01.22}{01.01.22}
     \end{thesistask}
 \end{document}
