Use correct school acronym

--- a/source/fefu.dtx
+++ b/source/fefu.dtx
@@ -492,7 +492,7 @@
             & \@FEFUmultilinepostfield[уч. степень, уч. звание]{Назначен рецензент }{\@FEFUreviewertitle}{\@FEFUcolumnwidth}\\
             & \@FEFUfield[фамилия, имя, отчество]{\@FEFUshortname{\@FEFUreviewer}}{\@FEFUcolumnwidth}\\ &\\
             Защищена в ГЭК с оценкой & \@FEFUaddguillemots{Допустить к защите}\\
-            \@FEFUfield{}{0.75\@FEFUcolumnwidth} & \multirow{2}{*}{\parbox{\@FEFUcolumnwidth}{Заместитель директора ШЦЭ по УВР, \@FEFUdeputytitle}}\\
+            \@FEFUfield{}{0.75\@FEFUcolumnwidth} & \multirow{2}{*}{\parbox{\@FEFUcolumnwidth}{Заместитель директора \@FEFUacronym{\@FEFUschooltitle}\@FEFUacronym{\@FEFUschool} по УВР, \@FEFUdeputytitle}}\\
             Секретарь ГЭК &\\
             \@FEFUsignamereversed{\@FEFUsignwidth}{\@FEFUsecretary}{\@FEFUcolumnwidth} & \@FEFUsignamereversed{\@FEFUsignwidth}{\@FEFUdeputy}{\@FEFUcolumnwidth}\\
             \@FEFUdate{\@FEFUcolumnwidth} & \@FEFUdate{\@FEFUcolumnwidth}\\& \\
